<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/general_background"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="110dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/python_logo"
        android:contentDescription="app logo"
        tools:ignore="HardcodedText" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/login_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="64dp"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp"

        app:boxCornerRadiusBottomEnd="16dp"
        app:boxCornerRadiusBottomStart="16dp"
        app:boxCornerRadiusTopEnd="16dp"
        app:boxCornerRadiusTopStart="16dp"

        android:hint="@string/email_login"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeColor="@color/box_color"
        app:boxStrokeWidth="2dp"
        app:startIconDrawable="@drawable/baseline_email_24"
        app:startIconTint="@color/orange"
        style="@style/MyTextInputEditTextStyle"
        tools:ignore="MissingConstraints">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/black"
            android:textColor="@color/black"
            android:textSize="16sp"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp"

        app:boxCornerRadiusBottomEnd="16dp"
        app:boxCornerRadiusBottomStart="16dp"
        app:boxCornerRadiusTopEnd="16dp"
        app:boxCornerRadiusTopStart="16dp"

        android:hint="@string/password_login"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/orange"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeColor="@color/box_color"
        app:boxStrokeWidth="2dp"
        app:startIconDrawable="@drawable/baseline_password_24"
        app:startIconTint="@color/orange"
        style="@style/MyTextInputEditTextStyle"
        tools:ignore="MissingConstraints">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/black"
            android:textColor="@color/black"
            android:textSize="16sp"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_register"
        android:backgroundTint="@color/orange"
        android:fontFamily="@font/bold"
        app:layout_constraintTop_toBottomOf="@id/password"
        android:layout_marginTop="48dp"
        app:layout_constraintStart_toStartOf="@id/password"
        app:layout_constraintEnd_toEndOf="@id/password"
        android:padding="16dp"
        app:cornerRadius="16dp"
        android:textSize="20sp"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txt_register_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btn_register"
        android:text="@string/txt_login_login"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/btn_register"
        app:layout_constraintEnd_toStartOf="@id/register_login"
        app:layout_constraintBottom_toBottomOf="parent"
        />
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/register_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btn_register"
        android:text="@string/login_login"
        android:textColor="@color/orange"
        android:textSize="18sp"
        android:fontFamily="@font/bold"
        android:layout_marginEnd="32dp"
        app:layout_constraintStart_toEndOf="@id/txt_register_login"
        app:layout_constraintEnd_toEndOf="@id/btn_register"
        app:layout_constraintBottom_toBottomOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>