<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_menu_background">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/dash_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:fontFamily="@font/bold"
        android:layout_margin="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/icon"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="85dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/python_logo"
        android:contentDescription="app logo"
         />


    <GridLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/dash_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:columnCount="2"
        android:rowCount="2"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="180dp"
        android:layout_marginBottom="16dp">

        <!-- Item 1 Card -->
        <androidx.cardview.widget.CardView
            android:id="@+id/about"
            style="@style/CardStyle"
            android:layout_columnWeight="1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center"
                >

                <ImageView
                    android:id="@+id/about_img"
                    android:layout_width="50dp"
                    android:layout_height="60dp"
                    android:src="@drawable/about_image"
                    />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/about_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/btn_login"
                    android:text="@string/about"
                    android:textColor="@color/blue"
                    android:textSize="22sp"
                    android:fontFamily="@font/bold"
                    app:layout_constraintStart_toStartOf="@id/btn_login"
                    app:layout_constraintEnd_toStartOf="@id/register_login"
                    app:layout_constraintBottom_toBottomOf="parent"
                    />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Item 2 Card -->
        <androidx.cardview.widget.CardView
            android:id="@+id/zen"
            style="@style/CardStyle"
            android:layout_columnWeight="1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center"
                >

                <ImageView
                    android:id="@+id/zen_img"
                    android:layout_width="50dp"
                    android:layout_height="60dp"
                    android:src="@drawable/meditation"
                    />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/zen_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/btn_login"
                    android:text="@string/zen"
                    android:textColor="@color/blue"
                    android:textSize="18sp"
                    android:fontFamily="@font/bold"
                    app:layout_constraintStart_toStartOf="@id/btn_login"
                    app:layout_constraintEnd_toStartOf="@id/register_login"
                    app:layout_constraintBottom_toBottomOf="parent"
                    />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/learn"
            style="@style/CardStyle"
            android:layout_columnWeight="2"
            android:layout_rowWeight="1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center"
                >

                <ImageView
                    android:id="@+id/learn_img"
                    android:layout_width="50dp"
                    android:layout_height="60dp"
                    android:src="@drawable/learn"
                    />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/learn_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/btn_login"
                    android:text="@string/learn"
                    android:textColor="@color/blue"
                    android:textSize="22sp"
                    android:fontFamily="@font/bold"
                    app:layout_constraintStart_toStartOf="@id/btn_login"
                    app:layout_constraintEnd_toStartOf="@id/register_login"
                    app:layout_constraintBottom_toBottomOf="parent"
                    />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/pratice"
            style="@style/CardStyle"
            android:layout_columnWeight="0"
            android:layout_rowWeight="1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center"
                >

                <ImageView
                    android:id="@+id/pratice_img"
                    android:layout_width="55dp"
                    android:layout_height="60dp"
                    android:src="@drawable/pratice"
                    />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/pratice_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/btn_login"
                    android:text="@string/pratice"
                    android:textColor="@color/blue"
                    android:textSize="22sp"
                    android:fontFamily="@font/bold"
                    app:layout_constraintStart_toStartOf="@id/btn_login"
                    app:layout_constraintEnd_toStartOf="@id/register_login"
                    app:layout_constraintBottom_toBottomOf="parent"
                    />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
